--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins in here
+
+.button-syle (@border: 10px; @font: white;) {
+  background-color: @button-bg;
+  border-radius: @border;
+  color: @font;
+  padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+  width: 90%;
+}
