--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
 // Navigation Styles here
+nav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 100%;
+    border-bottom: 2px dashed @navigation-border;
+    padding: 0% 10%;
+  }
+
+  nav a  {
+    font-size: 2rem;
+    padding: 10px 20px;
+    margin: auto 0;
+    text-decoration: none;
+    color: black;
+  }
+
+  nav a:first-child {
+    font-family: 'Indie Flower', cursive;
+    font-size: 5.5rem;
+    margin-right: auto;
+  }
